--- a/primeiro-projeto/src/app/cursos/cursos.component.html
+++ b/primeiro-projeto/src/app/cursos/cursos.component.html
@@ -1,3 +1,10 @@
 <p>
-  cursos works!
+  Lista de cursos do portal {{ nomePortal }}
 </p>
+
+
+<ul>
+  <li *ngFor="let curso of cursos">
+    {{ curso }}
+  </li>
+</ul>
