--- a/data-binding/src/app/data-binding/data-binding.component.html
+++ b/data-binding/src/app/data-binding/data-binding.component.html
@@ -1,5 +1,5 @@
-<section class="property-binding">
-  <!-- <article>
+<!-- <section class="property-binding">
+  <article>
     <h3>Interpolation / Interpolação</h3>
     <p>String renderizada com interpolação: {{ url }}</p>
     <p>Resultado de 1 + 1 = {{ 1 + 1 }}</p>
@@ -11,7 +11,7 @@
     <img src="{{ urlImage }}">
     <img [src]="urlImage">
     <img bind-src="urlImage">
-  </article> -->
+  </article>
 
   <article>
     <h3>Class e Style Binding</h3>
@@ -48,4 +48,28 @@
     </div>
   </article>
 
+</section> -->
+
+<section class="event-binding">
+  <article>
+    <h3>Event binding</h3>
+    <div>
+      <button class="btn btn-primary" (click)="botaoClicado()">Me clique!</button>
+      <br><br>
+      <input type="text"
+        (keyup)="onKeyUp($event)"
+        (keyup.enter)="salvarValor(campoInput.value)"
+        (blur)="salvarValor(campoInput.value)"
+        #campoInput />
+      <p>Valor atual: {{ valorAtual }}</p>
+      <p>Valor salvo: {{ valorSalvo }}</p>
+      <br/>
+      <span
+        (mouseover)="onMouseOverOut()"
+        (mouseout)="onMouseOverOut()"
+        [class.highlight]="isMouseOver">
+        Passe o mouse sobre mim
+      </span>
+    </div>
+  </article>
 </section>
