--- a/data-binding/src/app/data-binding/data-binding.component.html
+++ b/data-binding/src/app/data-binding/data-binding.component.html
@@ -48,7 +48,7 @@
     </div>
   </article>
 
-</section> -->
+</section>
 
 <section class="event-binding">
   <article>
@@ -72,4 +72,6 @@
       </span>
     </div>
   </article>
-</section>
+</section> -->
+
+<app-meu-form></app-meu-form>
