--- a/data-binding/src/app/data-binding/data-binding.component.html
+++ b/data-binding/src/app/data-binding/data-binding.component.html
@@ -81,5 +81,8 @@
     <h3>Input/output properties</h3>
 
     <app-curso [nomeCurso]="nomeDoCurso"></app-curso>
+    <contador [valor]="valorInicial"
+      (mudouValor)="onMudouValor($event)"
+    ></contador>
   </article>
 </section>
